--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 PORT = 8082
-MONGO_URI = "mongodb+srv://fahad:Fahad@77@stylo.610yksr.mongodb.net/"
+# MONGO_URI = "mongodb+srv://fahad:Fahad@77@stylo.610yksr.mongodb.net/"
+MONGO_URI = "mongodb://localhost:27017"
