--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
     "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6",
@@ -48,7 +49,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
