dashboard updated and mongoURI changed

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 PORT = 8082
-# MONGO_URI = "mongodb+srv://fahad:Fahad@77@stylo.610yksr.mongodb.net/"
-MONGO_URI = "mongodb://localhost:27017"
+MONGO_URI = "mongodb://fahad:FahadSohail@ac-rva1rb0-shard-00-00.610yksr.mongodb.net:27017,ac-rva1rb0-shard-00-01.610yksr.mongodb.net:27017,ac-rva1rb0-shard-00-02.610yksr.mongodb.net:27017/?ssl=true&replicaSet=atlas-ejkukr-shard-0&authSource=admin&retryWrites=true&w=majority&appName=stylo"
+# MONGO_URI = "mongodb://localhost:27017"
