login signup updated

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,6 @@
 PORT = 8082
 MONGO_URI = "mongodb://fahad:FahadSohail@ac-rva1rb0-shard-00-00.610yksr.mongodb.net:27017,ac-rva1rb0-shard-00-01.610yksr.mongodb.net:27017,ac-rva1rb0-shard-00-02.610yksr.mongodb.net:27017/?ssl=true&replicaSet=atlas-ejkukr-shard-0&authSource=admin&retryWrites=true&w=majority&appName=stylo"
 # MONGO_URI = "mongodb://localhost:27017"
+
+
+MAILGUN_API_KEY = "2626ccf8f0ea73c7d473435c31ed002d-1b5736a5-4863eff7"
